--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,6 @@
     "@typescript-eslint/explicit-module-boundary-types": "error",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-empty-interface": 0,
-    "react-refresh/only-export-components": "warn",
     "grouped-import/group": [
       "warn",
       {
@@ -27,8 +26,9 @@
           { "path": "date-fns" }
         ],
         "Routes": [{ "path": "router" }],
-        "Pages": [{ "path": "pages" }],
+        "Pages": [{ "path": "pages/" }],
         "Components": [{ "path": "components" }],
+        "Contexts": [{ "path": "contexts" }],
         "Styles": [
           { "path": "styles" },
           { "path": ".css" },
